# hko-rust

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: error.rs  fetch.rs  lib.rs  macro.rs  main.rs
src/common/: data_structure.rs  display.rs  lang.rs  macro.rs  mod.rs
src/common/data_structure/: message.rs
src/earthquake/: felt_report.rs  impl_api.rs  message.rs  mod.rs  test.rs
src/hourly_rainfall/: mod.rs  test.rs
src/internal/: deserialize.rs  hkt.rs  macro.rs  mod.rs
src/lunardate/: mod.rs  test.rs
src/opendata/: hhot.rs  hlt.rs  lhl.rs  ltmv.rs  mod.rs  ryes.rs  station.rs  test.rs
src/opendata/clm/: clmmaxt.rs  clmmint.rs  clmtemp.rs  mod.rs
src/opendata/rs/: mod.rs  mrs.rs  srs.rs
src/weather/: current.rs  impl_api.rs  local.rs  mod.rs  nine_day.rs  test.rs  tips.rs
src/weather/name/: mod.rs  string.rs
src/weather/psr/: mod.rs  string.rs  test.rs
src/weather/warning/: info.rs  mod.rs  summary.rs  test.rs
src/weather/warning/code/: mod.rs  string.rs
