[package]
authors = ["GreenYun <microsoft.zh.cn@gmail.com>"]
description = "Rust library for Hong Kong Observatory Open Data API"
edition = "2021"
include = ["src/**/*.rs", "!**/test.rs", "README.md", "LICENSE"]
keywords = ["weather", "hong-kong", "observatory"]
license = "MIT"
name = "hko"
repository = "https://github.com/GreenYun/hko-rust"
version = "1.6.0"

[features]
fetch = ["anyhow", "reqwest"]
opendata = ["csv", "nom"]
test = ["tokio"]

[dependencies]
anyhow = {version = "^1.0.44", optional = true}
chrono = {version = "^0.4", features = ["serde"]}
csv = {version = "^1.1", optional = true}
nom = {version = "^7", optional = true}
num-derive = "0.3"
num-traits = "0.2"
reqwest = {version = ">=0.11", features = ["json"], optional = true}
serde = {version = "^1.0.130", features = ["derive"]}
serde_json = "^1.0.68"
strum = ">=0.22"
strum_macros = ">=0.22"
tokio = {version = "^1.12", features = ["macros", "rt"], optional = true}
