[package]
authors = ["GreenYun <microsoft.zh.cn@gmail.com>"]
description = "Rust library for Hong Kong Observatory Open Data API"
documentation = "https://docs.rs/hko"
edition = "2021"
include = ["src/**/*.rs", "!**/test.rs", "README.md", "LICENSE"]
keywords = ["weather", "hong-kong", "observatory", "opendata"]
license = "MIT"
name = "hko"
readme = "README.md"
repository = "https://github.com/GreenYun/hko-rust"
version = "1.11.6"

[features]
default = ["earthquake", "hourly_rainfall", "lunardate", "opendata", "weather"]
earthquake = []
fetch = ["anyhow", "reqwest/json", "serde_json"]
hourly_rainfall = []
lunardate = []
opendata = ["csv", "nom", "serde_json"]
test = ["serde_json"]
weather = ["serde_repr"]

[dependencies]
anyhow = {version = "1", optional = true}
chrono = {version = "0.4", default-features = false, features = ["alloc", "serde"]}
csv = {version = "1", optional = true}
nom = {version = "7", optional = true}
reqwest = {version = "0.12", optional = true, default-features = false}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", optional = true}
serde_repr = {version = "0.1", optional = true}
strum = {version = ">=0.22", features = ["derive"]}

[dev-dependencies]
reqwest = {version = "0.12", features = ["rustls-tls", "json"]}
tokio = {version = "1", default-features = false, features = ["macros", "rt"]}

[package.metadata.docs.rs]
features = ["earthquake", "fetch", "hourly_rainfall", "lunardate", "opendata", "weather"]
